# csa-lab3

./: .gitignore  Cargo.toml  README.md  golden_test.py  notes.md  processor.md
.github/workflows/: lint-and-tests.yml
assembler/: Cargo.toml
assembler/src/: command_metadata.rs  commands.rs  compiler.rs  main.rs  parser.rs  source_code.rs
assembler/src/compiler/: command.rs  errors.rs
assembler/src/parser/: address.rs  argument.rs  command.rs  compiler_directive.rs  errors.rs  token.rs
assembler/src/source_code/: command.rs  compiler_directive.rs
cli_utils/: Cargo.toml
cli_utils/src/: lib.rs
cpu/: Cargo.toml
cpu/src/: cpu.rs  io_controller.rs  main.rs  memory.rs
cpu/src/cpu/: control_unit.rs  data_path.rs  io_controller.rs  shared.rs  status.rs
isa/: Cargo.toml
isa/src/: lib.rs
programs/: cat.asm  fibonachi.asm  hello_username.asm  hello_world.asm
tests/: cat.yml  hello_username.yml  hello_world.yml  prob2.yml
