[package]
name = "cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isa = { path = "../isa" }
cli_utils = { path = "../cli_utils" }
serde_json = "1.0"
log = "0.4.21"
simplelog = "0.12.2"
goldentests = "1.1.1"
